[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-healthcheck"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Swashman(John Nelson)", email = "jnelson2288@gmail.com" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [ "description", "version" ]
dependencies = [
    "allianceauth>=5",
]
optional-dependencies.tests-allianceauth-latest = [
    "coverage",
    "django-webtest",
]
urls.Changelog = "https://gitlab.com/astrum-mechanica/aa-healthcheck/-/blob/master/CHANGELOG.md"
urls.Documentation = "https://gitlab.com/astrum-mechanica/aa-healthcheck/-/blob/master/README.md"
urls.Homepage = "https://gitlab.com/astrum-mechanica/aa-healthcheck"
urls.Source = "https://gitlab.com/astrum-mechanica/aa-healthcheck"
urls.Tracker = "https://gitlab.com/astrum-mechanica/aa-healthcheck/-/issues"

[tool.hatch]
version.path = "healthcheck/__init__.py"
build.include = [
    "/healthcheck",
]
